Fix border overlapping

--- a/app/assets/stylesheets/overrides/travel.scss
+++ b/app/assets/stylesheets/overrides/travel.scss
@@ -98,8 +98,8 @@ table .dropdown-menu a{
 }
 .plan-header,.plan-header th {
   border-top-color: #ffffff !important;
-  border-left: #ffffff !important;
-  border-right: #ffffff !important;
+  border-left-color: #ffffff !important;
+  border-right-color: #ffffff !important;
   background-color: #ffffff !important;
   font-weight: normal !important;
 }
